RESOLVED FIXED131692
Invalid sh4 specific code for F_JITOperation_EJZZ callOperation
https://bugs.webkit.org/show_bug.cgi?id=131692
Summary Invalid sh4 specific code for F_JITOperation_EJZZ callOperation
Julien Brianceau
Reported 2014-04-15 13:30:18 PDT
Prototype is not F_JITOperation_EJJZ anymore since r160244, so the sh4 specific code is invalid now and has to be removed.
Attachments
Remove invalid sh4 specific code in JITInlines header (1.60 KB, patch)
2014-04-15 13:33 PDT, Julien Brianceau
no flags
Julien Brianceau
Comment 1 2014-04-15 13:33:50 PDT
Created attachment 229398 [details] Remove invalid sh4 specific code in JITInlines header
Geoffrey Garen
Comment 2 2014-04-15 15:06:35 PDT
Comment on attachment 229398 [details] Remove invalid sh4 specific code in JITInlines header r=me
WebKit Commit Bot
Comment 3 2014-04-15 15:36:57 PDT
Comment on attachment 229398 [details] Remove invalid sh4 specific code in JITInlines header Clearing flags on attachment: 229398 Committed r167329: <http://trac.webkit.org/changeset/167329>
WebKit Commit Bot
Comment 4 2014-04-15 15:36:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.